AI-JADEDEVS4/src/objects/Installment__c.object
<CustomObject>
    <description>Represents a single payment installment for a Multi-Year Opportunity/Order.</description>
    <fields>
        <fullName>Installment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the installment opportunity that represents this installment</inlineHelpText>
        <label>Installment Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Quote__r.SBQQ__Opportunity2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Amount__c</fullName>
        <label>Payment Due Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <formula>Quote__r.SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Installment</label>
    <nameField>
        <displayFormat>Installment-{0000000}</displayFormat>
        <label>Installment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>